Changes to Project 1
first HTML page for Project 1

--- a/Projects/Project-01/index-1.html
+++ b/Projects/Project-01/index-1.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-
 <html>
 	<head>
-		<title>Project 1 All HTML</title>
-		<meta charset="utf-8"/>
-		<link rel="stylesheet" href="main.css" />
+		<title>My HTML webpage!</title>
+		<meta charset="utf-8">
 	</head>
-	
+
 	<body>
-
-		<div class="main">
-
-			<h1>All HTML</h1>
-				
-				
-		</div>
-	
+		<h1>Header One!</h1>
+		<h2>Header Two!</h2>
+		<h3>Header Three!</h3>
+		<p>
+			Pedro Friedeberg is a unique artist and perhaps the last representative of surrealism, however, the validity of his work is indisputable. 
+			
+			<br>
+			<!-- Bolded Section -->
+			<b>
+				From his architectural studies and a protest against functionalism, he established anti-architecture as one of his main lines of work.
+			</b>
+			
+			<br>
+			
+			Throughout these pages we will find the furniture that has given this artist international fame: canvases of architectural fantasies with references to tantric writing, the Aztec codices, Catholicism, Hinduism, the symbols of the occult, as well as the distinctive features of the eccentric and very peculiar style of Friedeberg's work. The work explores Friedeberg's work and thought about his obsession with the housing space of the house, furniture and objects without function, through illustrated articles by researchers such as Ida Rodriguez Prampolini, Karen Cordero, Ignacio Prado, Alejandro Sordo, Susan Crowley, Patricia Ruiz-Healy and Dan Cameron. In this book, even the most rigorously documented texts are crossed by the cramp and disintegration produced by the work of this great international artist.
+		</p>	
 	</body>
 </html>
